# hashfile

./: .clang-format  CMakeLists.txt  README.md
src/: common.h  hash.c  hash.h  main.c  progress.c  progress.h  util.c  util.h
